# piiranha-redactor-lib

./: .gitignore  LICENSE  README.md  pyproject.toml
demo/: Dockerfile  README.md  app.py  requirements.txt
demo/.streamlit/: config.toml
src/piiranha_redactor/: __init__.py  detector.py  model.py
tests/: test_integration.py  test_unit.py
