[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "piiranha-redactor"
version = "0.1.0"
description = "A local PII detection and redaction library powered by Piiranha v1 (DeBERTa-v3)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Aaron Aco" }
]
keywords = ["pii", "redaction", "privacy", "nlp", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]

# torch is not pinned — users may need a specific CUDA version
dependencies = [
    "transformers>=4.44.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/aaronaco/piiranha-redactor-lib"
Issues = "https://github.com/aaronaco/piiranha-redactor-lib/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/piiranha_redactor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
